# iperf-orchestrator

./: .env.example  .gitignore  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  README.md  docker-compose.yml
agent/: README.md  agent.py  env.example  pyproject.toml  requirements.txt
backend/: Dockerfile  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml
backend/alembic/versions/: .gitkeep  c1c4e9f12260_add_partial_unique_index_for_port_.py  e924b7161259_add_disabled_field_to_agents.py
backend/app/: auth.py  background.py  config.py  database.py  main.py
backend/app/middleware/: agent_auth.py  version.py
backend/app/models/: __init__.py  agent.py  exercise.py  idempotency_log.py  port_reservation.py  task.py  test.py
backend/app/routers/: agent.py  agents.py  auth.py  exercises.py  tasks.py
backend/app/schemas/: __init__.py  agent.py  common.py  exercise.py  task.py  test.py
backend/app/services/: idempotency.py
deployment/: cloud-init.yaml  iperf-agent.service  manager-systemd.service
docker/: nginx.conf  supervisord.conf
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js  router.js
frontend/src/components/: NavBar.vue  Sparkline.vue  StatusBadge.vue
frontend/src/stores/: api.js  auth.js
frontend/src/utils/: iperfParser.js
frontend/src/views/: Agents.vue  ExerciseDetail.vue  Exercises.vue  Login.vue  Results.vue  Tasks.vue
